# extraire

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  deverser.py  deverser.spec  extraire.spec  pyimg4.py  pyproject.toml
.github/workflows/: build.yaml
deverser/: __main__.py  deverser.py
extraire/: __main__.py  cli.py  extraire.py  pyimg4.py
