[tool.poetry]
name = "extraire"
version = "0.1.3"
description = "Dumps onboard SHSH blobs with a valid generator for jailbroken iOS devices"
authors = ["beerpiss <lacvtg.a1.2023@gmail.com>"]
license = "0BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.11"
pyasn1 = "^0.4.8"
fabric = "^2.7.0"
rich = "^12.0.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.10"
black = "^22.1.0"
python-minifier = "^2.5.0"
flake8 = "^4.0.1"
twine = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
