[tool.poetry]
name = "extraire"
version = "0.1.4.post1"
description = "Dumps onboard SHSH blobs with a valid generator for jailbroken iOS devices"
authors = ["beerpiss <lacvtg.a1.2023@gmail.com>"]
license = "0BSD"
readme = "README.md"
keywords = ["ios", "jailbreak", "iboot", "img4", "shsh", "blob"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"
]
packages = [
    { include = "extraire" }
]

[tool.black]
target-version = ['py36', 'py37']
include = '\.spec?$'
extend-exclude = '''
/(
  extraire\/.+\.min\.py
  | .+\.min\.py
  | build
  | dist
  | env
)/
'''

[tool.isort]
profile = "black"

[tool.poetry.scripts]
extraire = "extraire.__main__:main"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.11"
pyasn1 = "^0.4.8"
fabric = "^2.7.0"
rich = "^12.0.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.10"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/beerpiss/extraire/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
